# calee

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  hacs.json  pyproject.toml  requirements_dev.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  hassfest.yml  release.yml  tests.yml
custom_components/calee/: __init__.py  api.py  calendar.py  config_flow.py  const.py  diagnostics.py  importer.py  manifest.json  migrations.py  models.py  notification_utils.py  notify.py  panel.py  permissions.py  recurrence.py  sensor.py  services.yaml  store.py  strings.json  todo.py  websocket_api.py
custom_components/calee/db/: base.py  migration.py  schema.py  sql_store.py
custom_components/calee/ws/: __init__.py  helpers.py  ws_admin.py  ws_events.py  ws_read.py  ws_tasks.py
docs/: api.md  architecture.md  database-migration.md  importing.md  security.md  storage.md  troubleshooting.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/cards/: next-shift.ts  shift-progress.ts
frontend/src/components/: task-edit-sheet.ts  task-item.ts  task-quick-add.ts  undo-snackbar.ts
tests/: conftest.py  test_calendar.py  test_config_flow.py  test_importer.py  test_notification_rules.py  test_permissions.py  test_permissions_enforcement.py  test_presets.py  test_recurrence.py  test_routines.py  test_sensors.py  test_services.py  test_sql_store.py  test_store_migrations.py  test_task_redesign.py  test_templates.py  test_time_math.py
(+34 files in other folders)
